src/main/java/de/dailab/simulator/parser/generated/SimulationFileParser.java
// Generated from C:/Users/thanisch/Documents/DAI-Labor/simulationfileparser/src/main/java/de/dailab/simulator/parser/grammar\SimulationFile.g4 by ANTLR 4.5
package de.dailab.simulator.parser.generated;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.misc.NotNull;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SimulationFileParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INC=1, DEC=2, VAR=3, IF=4, ELSE=5, PRE=6, DO=7, CALL=8, CONSTRUCTOR=9, 
		CREATE=10, SIMULATION=11, EXTENDS=12, EXTENDING=13, META_TEXT=14, TASKS=15, 
		FOR=16, TASK=17, PARTIALTASK=18, START=19, GOAL=20, AUTOCOMPLETE=21, LOOP=22, 
		SEQUENTIAL=23, KNOWLEDGE=24, BOOLEAN=25, EQUAL=26, UNEQUAL=27, PLUS=28, 
		SEMICOLON=29, COLON=30, COMMA=31, ASSIGN=32, META=33, CREATION_VAR=34, 
		POINTER=35, LPAREN=36, RPAREN=37, LBRACE=38, RBRACE=39, LBRACK=40, RBRACK=41, 
		IDENTIFIER=42, STRING_LITERAL=43, INTEGER=44, SKIP=45;
	public static final int
		RULE_parse = 0, RULE_simulation_stmt = 1, RULE_body_content = 2, RULE_config_stmt = 3, 
		RULE_string_assign = 4, RULE_integer_assign = 5, RULE_boolean_assign = 6, 
		RULE_partial_task = 7, RULE_task_config_stmt = 8, RULE_meta_assign = 9, 
		RULE_meta_link = 10, RULE_identifier_assign = 11, RULE_task = 12, RULE_knowledge = 13, 
		RULE_create_stmt = 14, RULE_partial_task_creation = 15, RULE_task_creation = 16, 
		RULE_meta_creation = 17, RULE_string_concat = 18, RULE_array_expr = 19, 
		RULE_array_index = 20, RULE_to_array_index = 21, RULE_from_array_index = 22, 
		RULE_constructor_scope_var = 23, RULE_constructor_scope_var_assign = 24, 
		RULE_constructor_stmt = 25, RULE_pre_block = 26, RULE_do_block = 27, RULE_block = 28, 
		RULE_statement = 29, RULE_if_stmt = 30, RULE_else_block = 31, RULE_if_expr = 32, 
		RULE_atomic_expr = 33, RULE_var_stmt = 34, RULE_inc_stmt = 35, RULE_dec_stmt = 36, 
		RULE_tasks_stmt = 37, RULE_tasks_arguments = 38;
	public static final String[] ruleNames = {
		"parse", "simulation_stmt", "body_content", "config_stmt", "string_assign", 
		"integer_assign", "boolean_assign", "partial_task", "task_config_stmt", 
		"meta_assign", "meta_link", "identifier_assign", "task", "knowledge", 
		"create_stmt", "partial_task_creation", "task_creation", "meta_creation", 
		"string_concat", "array_expr", "array_index", "to_array_index", "from_array_index", 
		"constructor_scope_var", "constructor_scope_var_assign", "constructor_stmt", 
		"pre_block", "do_block", "block", "statement", "if_stmt", "else_block", 
		"if_expr", "atomic_expr", "var_stmt", "inc_stmt", "dec_stmt", "tasks_stmt", 
		"tasks_arguments"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'inc'", "'dec'", "'var'", "'if'", "'else'", "'pre'", "'do'", "'call'", 
		"'constructor'", "'create'", "'simulation'", "'extends'", "'extending'", 
		"'meta'", "'tasks'", "'for'", "'task'", "'partialtask'", "'start'", "'goal'", 
		"'autocomplete'", "'loop'", "'sequential'", "'knowledge'", null, "'=='", 
		"'!='", "'+'", "';'", "':'", "','", "':='", "'@'", "'$'", "'*'", "'('", 
		"')'", "'{'", "'}'", "'['", "']'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "INC", "DEC", "VAR", "IF", "ELSE", "PRE", "DO", "CALL", "CONSTRUCTOR", 
		"CREATE", "SIMULATION", "EXTENDS", "EXTENDING", "META_TEXT", "TASKS", 
		"FOR", "TASK", "PARTIALTASK", "START", "GOAL", "AUTOCOMPLETE", "LOOP", 
		"SEQUENTIAL", "KNOWLEDGE", "BOOLEAN", "EQUAL", "UNEQUAL", "PLUS", "SEMICOLON", 
		"COLON", "COMMA", "ASSIGN", "META", "CREATION_VAR", "POINTER", "LPAREN", 
		"RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "IDENTIFIER", "STRING_LITERAL", 
		"INTEGER", "SKIP"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override
	@NotNull
	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SimulationFile.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SimulationFileParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParseContext extends ParserRuleContext {
		public Simulation_stmtContext simulation_stmt() {
			return getRuleContext(Simulation_stmtContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SimulationFileParser.EOF, 0); }
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimulationFileListener ) ((SimulationFileListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimulationFileListener ) ((SimulationFileListener)listener).exitParse(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78); 
			simulation_stmt();
			setState(79); 
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Simulation_stmtContext extends ParserRuleContext {
		public TerminalNode SIMULATION() { return getToken(SimulationFileParser.SIMULATION, 0); }
		public TerminalNode IDENTIFIER() { return getToken(SimulationFileParser.IDENTIFIER, 0); }
		public TerminalNode LBRACE() { return getToken(SimulationFileParser.LBRACE, 0); }
		public Body_contentContext body_content() {
			return getRuleContext(Body_contentContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(SimulationFileParser.RBRACE, 0); }
		public Simulation_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simulation_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimulationFileListener ) ((SimulationFileListener)listener).enterSimulation_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimulationFileListener ) ((SimulationFileListener)listener).exitSimulation_stmt(this);
		}
	}

	public final Simulation_stmtContext simulation_stmt() throws RecognitionException {
		Simulation_stmtContext _localctx = new Simulation_stmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_simulation_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81); 
			match(SIMULATION);
			setState(82); 
			match(IDENTIFIER);
			setState(83); 
			match(LBRACE);
			setState(84); 
			body_content();
			setState(85); 
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Body_contentContext extends ParserRuleContext {
		public List<Config_stmtContext> config_stmt() {
			return getRuleContexts(Config_stmtContext.class);
		}
		public Config_stmtContext config_stmt(int i) {
			return getRuleContext(Config_stmtContext.class,i);
		}
		public List<Partial_taskContext> partial_task() {
			return getRuleContexts(Partial_taskContext.class);
		}
		public Partial_taskContext partial_task(int i) {
			return getRuleContext(Partial_taskContext.class,i);
		}
		public List<TaskContext> task() {
			return getRuleContexts(TaskContext.class);
		}
		public TaskContext task(int i) {
			return getRuleContext(TaskContext.class,i);
		}
		public List<Meta_assignContext> meta_assign() {
			return getRuleContexts(Meta_assignContext.class);
		}
		public Meta_assignContext meta_assign(int i) {
			return getRuleContext(Meta_assignContext.class,i);
		}
		public List<Constructor_stmtContext> constructor_stmt() {
			return getRuleContexts(Constructor_stmtContext.class);
		}
		public Constructor_stmtContext constructor_stmt(int i) {
			return getRuleContext(Constructor_stmtContext.class,i);
		}
		public List<Tasks_stmtContext> tasks_stmt() {
			return getRuleContexts(Tasks_stmtContext.class);
		}
		public Tasks_stmtContext tasks_stmt(int i) {
			return getRuleContext(Tasks_stmtContext.class,i);
		}
		public Body_contentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimulationFileListener ) ((SimulationFileListener)listener).enterBody_content(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimulationFileListener ) ((SimulationFileListener)listener).exitBody_content(this);
		}
	}

	public final Body_contentContext body_content() throws RecognitionException {
		Body_contentContext _localctx = new Body_contentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_body_content);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CALL) | (1L << CONSTRUCTOR) | (1L << TASK) | (1L << PARTIALTASK) | (1L << START) | (1L << GOAL) | (1L << AUTOCOMPLETE) | (1L << LOOP) | (1L << META))) != 0)) {
				{
				setState(93);
				switch (_input.LA(1)) {
				case START:
				case GOAL:
				case AUTOCOMPLETE:
				case LOOP:
					{
					setState(87); 
					config_stmt();
					}
					break;
				case PARTIALTASK:
					{
					setState(88); 
					partial_task();
					}
					break;
				case TASK:
					{
					setState(89); 
					task();
					}
					break;
				case META:
					{
					setState(90); 
					meta_assign();
					}
					break;
				case CONSTRUCTOR:
					{
					setState(91); 
					constructor_stmt();
					}
					break;
				case CALL:
					{
					setState(92); 
					tasks_stmt();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Config_stmtContext extends ParserRuleContext {
		public TerminalNode START() { return getToken(SimulationFileParser.START, 0); }
		public String_assignContext string_assign() {
			return getRuleContext(String_assignContext.class,0);
		}
		public TerminalNode GOAL() { return getToken(SimulationFileParser.GOAL, 0); }
		public TerminalNode LOOP() { return getToken(SimulationFileParser.LOOP, 0); }
		public Integer_assignContext integer_assign() {
			return getRuleContext(Integer_assignContext.class,0);
		}
		public TerminalNode AUTOCOMPLETE() { return getToken(SimulationFileParser.AUTOCOMPLETE, 0); }
		public Boolean_assignContext boolean_assign() {
			return getRuleContext(Boolean_assignContext.class,0);
		}
		public Config_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_config_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimulationFileListener ) ((SimulationFileListener)listener).enterConfig_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimulationFileListener ) ((SimulationFileListener)listener).exitConfig_stmt(this);
		}
	}

	public final Config_stmtContext config_stmt() throws RecognitionException {
		Config_stmtContext _localctx = new Config_stmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_config_stmt);
		try {
			setState(106);
			switch (_input.LA(1)) {
			case START:
				enterOuterAlt(_localctx, 1);
				{
				setState(98); 
				match(START);
				setState(99); 
				string_assign();
				}
				break;
			case GOAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(100); 
				match(GOAL);
				setState(101); 
				string_assign();
				}
				break;
			case LOOP:
				enterOuterAlt(_localctx, 3);
				{
				setState(102); 
				match(LOOP);
				setState(103); 
				integer_assign();
				}
				break;
			case AUTOCOMPLETE:
				enterOuterAlt(_localctx, 4);
				{
				setState(104); 
				match(AUTOCOMPLETE);
				setState(105); 
				boolean_assign();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class String_assignContext extends ParserRuleContext {
		public TerminalNode ASSIGN() { return getToken(SimulationFileParser.ASSIGN, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(SimulationFileParser.STRING_LITERAL, 0); }
		public TerminalNode SEMICOLON() { return getToken(SimulationFileParser.SEMICOLON, 0); }
		public String_assignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimulationFileListener ) ((SimulationFileListener)listener).enterString_assign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimulationFileListener ) ((SimulationFileListener)listener).exitString_assign(this);
		}
	}

	public final String_assignContext string_assign() throws RecognitionException {
		String_assignContext _localctx = new String_assignContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_string_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108); 
			match(ASSIGN);
			setState(109); 
			match(STRING_LITERAL);
			setState(110); 
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Integer_assignContext extends ParserRuleContext {
		public TerminalNode ASSIGN() { return getToken(SimulationFileParser.ASSIGN, 0); }
		public TerminalNode INTEGER() { return getToken(SimulationFileParser.INTEGER, 0); }
		public TerminalNode SEMICOLON() { return getToken(SimulationFileParser.SEMICOLON, 0); }
		public Integer_assignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_integer_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimulationFileListener ) ((SimulationFileListener)listener).enterInteger_assign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimulationFileListener ) ((SimulationFileListener)listener).exitInteger_assign(this);
		}
	}

	public final Integer_assignContext integer_assign() throws RecognitionException {
		Integer_assignContext _localctx = new Integer_assignContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_integer_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112); 
			match(ASSIGN);
			setState(113); 
			match(INTEGER);
			setState(114); 
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Boolean_assignContext extends ParserRuleContext {
		public TerminalNode ASSIGN() { return getToken(SimulationFileParser.ASSIGN, 0); }
		public TerminalNode BOOLEAN() { return getToken(SimulationFileParser.BOOLEAN, 0); }
		public TerminalNode SEMICOLON() { return getToken(SimulationFileParser.SEMICOLON, 0); }
		public Boolean_assignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolean_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimulationFileListener ) ((SimulationFileListener)listener).enterBoolean_assign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimulationFileListener ) ((SimulationFileListener)listener).exitBoolean_assign(this);
		}
	}

	public final Boolean_assignContext boolean_assign() throws RecognitionException {
		Boolean_assignContext _localctx = new Boolean_assignContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_boolean_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116); 
			match(ASSIGN);
			setState(117); 
			match(BOOLEAN);
			setState(118); 
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Partial_taskContext extends ParserRuleContext {
		public TerminalNode PARTIALTASK() { return getToken(SimulationFileParser.PARTIALTASK, 0); }
		public TerminalNode IDENTIFIER() { return getToken(SimulationFileParser.IDENTIFIER, 0); }
		public TerminalNode LBRACE() { return getToken(SimulationFileParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(SimulationFileParser.RBRACE, 0); }
		public List<Task_config_stmtContext> task_config_stmt() {
			return getRuleContexts(Task_config_stmtContext.class);
		}
		public Task_config_stmtContext task_config_stmt(int i) {
			return getRuleContext(Task_config_stmtContext.class,i);
		}
		public List<Meta_assignContext> meta_assign() {
			return getRuleContexts(Meta_assignContext.class);
		}
		public Meta_assignContext meta_assign(int i) {
			return getRuleContext(Meta_assignContext.class,i);
		}
		public Partial_taskContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_partial_task; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimulationFileListener ) ((SimulationFileListener)listener).enterPartial_task(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimulationFileListener ) ((SimulationFileListener)listener).exitPartial_task(this);
		}
	}

	public final Partial_taskContext partial_task() throws RecognitionException {
		Partial_taskContext _localctx = new Partial_taskContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_partial_task);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120); 
			match(PARTIALTASK);
			setState(121); 
			match(IDENTIFIER);
			setState(122); 
			match(LBRACE);
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEQUENTIAL || _la==META) {
				{
				setState(125);
				switch (_input.LA(1)) {
				case SEQUENTIAL:
					{
					setState(123); 
					task_config_stmt();
					}
					break;
				case META:
					{
					setState(124); 
					meta_assign();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(130); 
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Task_config_stmtContext extends ParserRuleContext {
		public TerminalNode SEQUENTIAL() { return getToken(SimulationFileParser.SEQUENTIAL, 0); }
		public Boolean_assignContext boolean_assign() {
			return getRuleContext(Boolean_assignContext.class,0);
		}
		public Task_config_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_task_config_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimulationFileListener ) ((SimulationFileListener)listener).enterTask_config_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimulationFileListener ) ((SimulationFileListener)listener).exitTask_config_stmt(this);
		}
	}

	public final Task_config_stmtContext task_config_stmt() throws RecognitionException {
		Task_config_stmtContext _localctx = new Task_config_stmtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_task_config_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132); 
			match(SEQUENTIAL);
			setState(133); 
			boolean_assign();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Meta_assignContext extends ParserRuleContext {
		public TerminalNode META() { return getToken(SimulationFileParser.META, 0); }
		public TerminalNode IDENTIFIER() { return getToken(SimulationFileParser.IDENTIFIER, 0); }
		public String_assignContext string_assign() {
			return getRuleContext(String_assignContext.class,0);
		}
		public Identifier_assignContext identifier_assign() {
			return getRuleContext(Identifier_assignContext.class,0);
		}
		public Meta_linkContext meta_link() {
			return getRuleContext(Meta_linkContext.class,0);
		}
		public Meta_assignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_meta_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimulationFileListener ) ((SimulationFileListener)listener).enterMeta_assign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimulationFileListener ) ((SimulationFileListener)listener).exitMeta_assign(this);
		}
	}

	public final Meta_assignContext meta_assign() throws RecognitionException {
		Meta_assignContext _localctx = new Meta_assignContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_meta_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135); 
			match(META);
			setState(136); 
			match(IDENTIFIER);
			setState(140);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(137); 
				string_assign();
				}
				break;
			case 2:
				{
				setState(138); 
				identifier_assign();
				}
				break;
			case 3:
				{
				setState(139); 
				meta_link();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Meta_linkContext extends ParserRuleContext {
		public TerminalNode ASSIGN() { return getToken(SimulationFileParser.ASSIGN, 0); }
		public TerminalNode META() { return getToken(SimulationFileParser.META, 0); }
		public TerminalNode IDENTIFIER() { return getToken(SimulationFileParser.IDENTIFIER, 0); }
		public Meta_linkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_meta_link; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimulationFileListener ) ((SimulationFileListener)listener).enterMeta_link(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimulationFileListener ) ((SimulationFileListener)listener).exitMeta_link(this);
		}
	}

	public final Meta_linkContext meta_link() throws RecognitionException {
		Meta_linkContext _localctx = new Meta_linkContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_meta_link);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142); 
			match(ASSIGN);
			setState(143); 
			match(META);
			setState(144); 
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
